--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,13 +1,9 @@
 
 ##############
-spring.datasource.url=jdbc:h2:mem:~
+spring.datasource.url=jdbc:h2:file:./db
 spring.datasource.username=javohir
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.h2.Driver
-server.port=9090
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 ############# MAIL #############
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=587
